Code/syntax.output
Terminals unused in grammar

    ASSIGN
    MUL


State 0 conflicts: 1 shift/reduce
State 1 conflicts: 1 shift/reduce
State 6 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 71 conflicts: 2 shift/reduce
State 72 conflicts: 2 shift/reduce
State 98 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 102 conflicts: 2 shift/reduce
State 103 conflicts: 2 shift/reduce
State 104 conflicts: 10 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 109 conflicts: 10 shift/reduce
State 110 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | error ExtDefList
    5           | ε

    6 ExtDef: Specifier ExtDecList SEMI
    7       | Specifier SEMI
    8       | Specifier FunDec CompSt
    9       | Specifier FunDec SEMI
   10       | Specifier FunDec error

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList

   13 Specifier: TYPE
   14          | StructSpecifier

   15 StructSpecifier: STRUCT OptTag LC DefList RC
   16                | STRUCT Tag

   17 OptTag: ID
   18       | ε

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC error RC

   29 StmtList: Stmt StmtList
   30         | ε

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | WHILE LP error RP Stmt
   38     | IF LP error RP Stmt
   39     | IF LP Exp RP error ELSE Stmt

   40 DefList: Def DefList
   41        | ε

   42 Def: Specifier DecList SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp
   47    | VarDec error

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | error

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 4 10 28 37 38 39 47 66
    INT <val> (258) 21 64
    FLOAT <val> (259) 65
    PLUS <val> (260) 52
    MINUS <val> (261) 53 57
    STAR <val> (262) 54
    DIV <val> (263) 55
    AND <val> (264) 49
    OR <val> (265) 50
    DOT <val> (266) 62
    NOT <val> (267) 58
    ID <val> (268) 17 19 20 22 23 59 60 62 63
    SEMI <val> (269) 6 7 9 31 33 42
    COMMA <val> (270) 12 24 44 67
    ASSIGNOP <val> (271) 46 48
    RELOP <val> (272) 51
    TYPE <val> (273) 13
    LP <val> (274) 22 23 34 35 36 37 38 39 56 59 60
    RP <val> (275) 22 23 34 35 36 37 38 39 56 59 60
    LB <val> (276) 21 61
    RB <val> (277) 21 61
    LC <val> (278) 15 27 28
    RC <val> (279) 15 27 28
    STRUCT <val> (280) 15 16
    RETURN <val> (281) 33
    IF <val> (282) 34 35 38 39
    ELSE <val> (283) 35 39
    WHILE <val> (284) 36 37
    ASSIGN (285)
    MUL (286)
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program <val> (34)
        on left: 1 2
        on right: 0
    ExtDefList <val> (35)
        on left: 3 4 5
        on right: 1 2 3 4
    ExtDef <val> (36)
        on left: 6 7 8 9 10
        on right: 3
    ExtDecList <val> (37)
        on left: 11 12
        on right: 6 12
    Specifier <val> (38)
        on left: 13 14
        on right: 6 7 8 9 10 26 42
    StructSpecifier <val> (39)
        on left: 15 16
        on right: 14
    OptTag <val> (40)
        on left: 17 18
        on right: 15
    Tag <val> (41)
        on left: 19
        on right: 16
    VarDec <val> (42)
        on left: 20 21
        on right: 11 12 21 26 45 46 47
    FunDec <val> (43)
        on left: 22 23
        on right: 8 9 10
    VarList <val> (44)
        on left: 24 25
        on right: 22 24
    ParamDec <val> (45)
        on left: 26
        on right: 24 25
    CompSt <val> (46)
        on left: 27 28
        on right: 8 32
    StmtList <val> (47)
        on left: 29 30
        on right: 27 29
    Stmt <val> (48)
        on left: 31 32 33 34 35 36 37 38 39
        on right: 29 34 35 36 37 38 39
    DefList <val> (49)
        on left: 40 41
        on right: 15 27 40
    Def <val> (50)
        on left: 42
        on right: 40
    DecList <val> (51)
        on left: 43 44
        on right: 42 44
    Dec <val> (52)
        on left: 45 46 47
        on right: 43 44
    Exp <val> (53)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 31 33 34 35 36 39 46 48 49 50 51 52 53 54 55 56 57 58 61 62 67 68
    Args <val> (54)
        on left: 67 68
        on right: 59 67


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 5 (ExtDefList)
    error  [reduce using rule 5 (ExtDefList)]

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    4 ExtDefList: error • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 5 (ExtDefList)
    error  [reduce using rule 5 (ExtDefList)]

    ExtDefList       go to state 9
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 2

   13 Specifier: TYPE •

    $default  reduce using rule 13 (Specifier)


State 3

   15 StructSpecifier: STRUCT • OptTag LC DefList RC
   16                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 18 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •
    2        | ExtDefList • error

    error  shift, and go to state 14

    $end  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end   reduce using rule 5 (ExtDefList)
    error  [reduce using rule 5 (ExtDefList)]

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    6 ExtDef: Specifier • ExtDecList SEMI
    7       | Specifier • SEMI
    8       | Specifier • FunDec CompSt
    9       | Specifier • FunDec SEMI
   10       | Specifier • FunDec error

    ID    shift, and go to state 16
    SEMI  shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 8

   14 Specifier: StructSpecifier •

    $default  reduce using rule 14 (Specifier)


State 9

    4 ExtDefList: error ExtDefList •

    $default  reduce using rule 4 (ExtDefList)


State 10

   17 OptTag: ID •
   19 Tag: ID •

    LC        reduce using rule 17 (OptTag)
    $default  reduce using rule 19 (Tag)


State 11

   15 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 21


State 12

   16 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 16 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 Program: ExtDefList error •

    $default  reduce using rule 2 (Program)


State 15

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 16

   20 VarDec: ID •
   22 FunDec: ID • LP VarList RP
   23       | ID • LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 20 (VarDec)


State 17

    7 ExtDef: Specifier SEMI •

    $default  reduce using rule 7 (ExtDef)


State 18

    6 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 23


State 19

   11 ExtDecList: VarDec •
   12           | VarDec • COMMA ExtDecList
   21 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 11 (ExtDecList)


State 20

    8 ExtDef: Specifier FunDec • CompSt
    9       | Specifier FunDec • SEMI
   10       | Specifier FunDec • error

    error  shift, and go to state 26
    SEMI   shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 21

   15 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 22

   22 FunDec: ID LP • VarList RP
   23       | ID LP • RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 23

    6 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 6 (ExtDef)


State 24

   12 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 19


State 25

   21 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 39


State 26

   10 ExtDef: Specifier FunDec error •

    $default  reduce using rule 10 (ExtDef)


State 27

    9 ExtDef: Specifier FunDec SEMI •

    $default  reduce using rule 9 (ExtDef)


State 28

   27 CompSt: LC • DefList StmtList RC
   28       | LC • error RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 32


State 29

    8 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 8 (ExtDef)


State 30

   42 Def: Specifier • DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 31

   15 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 45


State 32

   40 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 32


State 33

   23 FunDec: ID LP RP •

    $default  reduce using rule 23 (FunDec)


State 34

   26 ParamDec: Specifier • VarDec

    ID  shift, and go to state 37

    VarDec  go to state 47


State 35

   22 FunDec: ID LP VarList • RP

    RP  shift, and go to state 48


State 36

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 49

    $default  reduce using rule 25 (VarList)


State 37

   20 VarDec: ID •

    $default  reduce using rule 20 (VarDec)


State 38

   12 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 12 (ExtDecList)


State 39

   21 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 50


State 40

   28 CompSt: LC error • RC

    RC  shift, and go to state 51


State 41

   27 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    ID      shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


State 42

   21 VarDec: VarDec • LB INT RB
   45 Dec: VarDec •
   46    | VarDec • ASSIGNOP Exp
   47    | VarDec • error

    error     shift, and go to state 66
    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 25

    SEMI   reduce using rule 45 (Dec)
    COMMA  reduce using rule 45 (Dec)


State 43

   42 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 68


State 44

   43 DecList: Dec •
   44        | Dec • COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 43 (DecList)


State 45

   15 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 15 (StructSpecifier)


State 46

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 47

   21 VarDec: VarDec • LB INT RB
   26 ParamDec: Specifier VarDec •

    LB  shift, and go to state 25

    $default  reduce using rule 26 (ParamDec)


State 48

   22 FunDec: ID LP VarList RP •

    $default  reduce using rule 22 (FunDec)


State 49

   24 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 70
    ParamDec         go to state 36


State 50

   21 VarDec: VarDec LB INT RB •

    $default  reduce using rule 21 (VarDec)


State 51

   28 CompSt: LC error RC •

    $default  reduce using rule 28 (CompSt)


State 52

   66 Exp: error •

    $default  reduce using rule 66 (Exp)


State 53

   64 Exp: INT •

    $default  reduce using rule 64 (Exp)


State 54

   65 Exp: FLOAT •

    $default  reduce using rule 65 (Exp)


State 55

   57 Exp: MINUS • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 71


State 56

   58 Exp: NOT • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 72


State 57

   59 Exp: ID • LP Args RP
   60    | ID • LP RP
   63    | ID •

    LP  shift, and go to state 73

    $default  reduce using rule 63 (Exp)


State 58

   56 Exp: LP • Exp RP

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


State 59

   33 Stmt: RETURN • Exp SEMI

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


State 60

   34 Stmt: IF • LP Exp RP Stmt
   35     | IF • LP Exp RP Stmt ELSE Stmt
   38     | IF • LP error RP Stmt
   39     | IF • LP Exp RP error ELSE Stmt

    LP  shift, and go to state 76


State 61

   36 Stmt: WHILE • LP Exp RP Stmt
   37     | WHILE • LP error RP Stmt

    LP  shift, and go to state 77


State 62

   32 Stmt: CompSt •

    $default  reduce using rule 32 (Stmt)


State 63

   27 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 78


State 64

   29 StmtList: Stmt • StmtList

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    ID      shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 28
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 79
    Stmt      go to state 64
    Exp       go to state 65


State 65

   31 Stmt: Exp • SEMI
   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    LB        shift, and go to state 90


State 66

   47 Dec: VarDec error •

    $default  reduce using rule 47 (Dec)


State 67

   46 Dec: VarDec ASSIGNOP • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 91


State 68

   42 Def: Specifier DecList SEMI •

    $default  reduce using rule 42 (Def)


State 69

   44 DecList: Dec COMMA • DecList

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 92
    Dec      go to state 44


State 70

   24 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 24 (VarList)


State 71

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   57    | MINUS Exp •
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID

    STAR      shift, and go to state 82
    DOT       shift, and go to state 86
    ASSIGNOP  shift, and go to state 88
    LB        shift, and go to state 90

    STAR      [reduce using rule 57 (Exp)]
    ASSIGNOP  [reduce using rule 57 (Exp)]
    $default  reduce using rule 57 (Exp)


State 72

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   58    | NOT Exp •
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID

    STAR      shift, and go to state 82
    DOT       shift, and go to state 86
    ASSIGNOP  shift, and go to state 88
    LB        shift, and go to state 90

    STAR      [reduce using rule 58 (Exp)]
    ASSIGNOP  [reduce using rule 58 (Exp)]
    $default  reduce using rule 58 (Exp)


State 73

   59 Exp: ID LP • Args RP
   60    | ID LP • RP

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 93

    Exp   go to state 94
    Args  go to state 95


State 74

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   56    | LP Exp • RP
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    RP        shift, and go to state 96
    LB        shift, and go to state 90


State 75

   33 Stmt: RETURN Exp • SEMI
   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID

    PLUS      shift, and go to state 80
    MINUS     shift, and go to state 81
    STAR      shift, and go to state 82
    DIV       shift, and go to state 83
    AND       shift, and go to state 84
    OR        shift, and go to state 85
    DOT       shift, and go to state 86
    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    LB        shift, and go to state 90


State 76

   34 Stmt: IF LP • Exp RP Stmt
   35     | IF LP • Exp RP Stmt ELSE Stmt
   38     | IF LP • error RP Stmt
   39     | IF LP • Exp RP error ELSE Stmt

    error  shift, and go to state 98
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 99


State 77

   36 Stmt: WHILE LP • Exp RP Stmt
   37     | WHILE LP • error RP Stmt

    error  shift, and go to state 100
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 101


State 78

   27 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 27 (CompSt)


State 79

   29 StmtList: Stmt StmtList •

    $default  reduce using rule 29 (StmtList)


State 80

   52 Exp: Exp PLUS • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 102


State 81

   53 Exp: Exp MINUS • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 103


State 82

   54 Exp: Exp STAR • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 104


State 83

   55 Exp: Exp DIV • Exp

    error  shift, and go to state 52
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    ID     shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 105


State 84

   49 Exp: Exp AND • Exp
